--- a/map_info.yaml
+++ b/map_info.yaml
@@ -1,24 +1,24 @@
 #where the map information shall live.
 ---
-player_position:
+player:
   column: 1
   row: 1
-goblin_one_position:
+goblin_one:
   column: 2
   row: 2
-goblin_two_position:
+goblin_two:
   column: 8
   row: 10
-bandit_one_position:
+bandit_one:
   column: 6
   row: 5
-dwarf_one_position:
+dwarf_one:
   column: 10
   row: 1
-chest_one_position:
+chest_one:
   column: 5
   row: 6
-finish_line_position:
+finish_line:
   column: 10
   row: 10
 ...
