--- a/data/npc_data.yaml
+++ b/data/npc_data.yaml
@@ -2,6 +2,7 @@
 ---
 goblin:
   character_class: goblin
+  max_hit_points: 5
   hit_points: 5
   attack_power: 4
   defense: 0
@@ -10,6 +11,7 @@ goblin:
   symbol: 9785
 bandit:
   character_class: bandit
+  max_hit_points: 10
   hit_points: 10
   attack_power: 5
   defense: 1
@@ -18,6 +20,7 @@ bandit:
   symbol: 9792
 dwarf:
   character_class: dwarf
+  max_hit_points: 15
   hit_points: 15
   attack_power: 6
   defense: 0
