adds entity framework

--- a/data/level_1_objects.yaml
+++ b/data/level_1_objects.yaml
@@ -45,6 +45,8 @@ objects:
     location:
       column: 5
       row: 6
+    events:
+      - find_loot_event
   - object_name: finish_line
     key: finish_line
     location:
