cleans up the imports to be more organized, also cleans up errant comments and lines.

--- a/data/level_1_objects.yaml
+++ b/data/level_1_objects.yaml
@@ -1,4 +1,4 @@
-# #where the level one objects shall live.
+# the entities for a particular level, in this case, level_1
 ---
 objects:
   - object_name: player_start
