--- a/data/items.yaml
+++ b/data/items.yaml
@@ -27,6 +27,10 @@ item_data:
     type: 3 # armor
     effects:
       defense_scale: 2
+    modifier:
+      defense
+    modifier_value:
+      2
     weight: 8
     value: 150
     consumable: False
@@ -69,6 +73,8 @@ item_data:
     equipable: False
   gold_bar:
     display_name: Gold Bar
+    effects:
+      null
     modifier:
       null
     modifier_value:
