--- a/data/npc_data.yaml
+++ b/data/npc_data.yaml
@@ -11,7 +11,7 @@ goblin:
   speed: 6
   symbol: goblin
   inventory:
-    - torch
+    - red_potion
     - rock
 bandit:
   entity_type: monster
@@ -26,7 +26,7 @@ bandit:
   inventory:
     - red_potion
     - red_potion
-    - torch
+    - gold_bar
 dwarf:
   entity_type: npc
   character_class: dwarf
