--- a/data/game_data/items.yaml
+++ b/data/game_data/items.yaml
@@ -103,4 +103,14 @@ item_data:
     value: 100000
     consumable: False
     equipable: True
+  the_incredible_god_slaying_sword_of_slaying_gods:
+    display_name: God Slayers Sword
+    modifier:
+      attack_power
+    modifier_value:
+      1000
+    weight: 500
+    value: 1000000
+    consumable: False
+    equipable: True
 ...
