--- a/data/level_one_data/level_1_entities.yaml
+++ b/data/level_one_data/level_1_entities.yaml
@@ -19,6 +19,13 @@ templates:
     events:
       - BattleEvent#BATTLE_EVENT
   - template_name: monster
+    key: ogre
+    location:
+      column: 1
+      row: 10
+    events:
+      - BattleEvent#BATTLE_EVENT
+  - template_name: monster
     key: bandit
     location:
       column: 5
