--- a/data/symbols_dictionary.yaml
+++ b/data/symbols_dictionary.yaml
@@ -1,4 +1,3 @@
-#map symbols keys. and yaml funsies
 ---
 TL: 9484
 BL: 9492
@@ -13,6 +12,7 @@ EE: 8901
 player: 9791 # 9822
 goblin: 9785
 bandit: 9792
+ogre: 9760
 dwarf: 9786
 loot_chest: 9691
 finish_line: 43359
