--- a/data/level_data/level_2_data/level_2_entities.yaml
+++ b/data/level_data/level_2_data/level_2_entities.yaml
@@ -3,54 +3,33 @@ templates:
   - template_name: player_start
     location:
       column: 1
-      row: 1
+      row: 10
   - template_name: monster
     key: goblin
     location:
       column: 2
-      row: 2
+      row: 1
     events:
       - BattleEvent#BATTLE_EVENT
   - template_name: monster
     key: goblin
     location:
-      column: 8
-      row: 10
-    events:
-      - BattleEvent#BATTLE_EVENT
-  - template_name: monster
-    key: ogre
-    location:
-      column: 1
+      column: 4
       row: 10
     events:
       - BattleEvent#BATTLE_EVENT
   - template_name: monster
     key: bandit
     location:
-      column: 5
-      row: 5
+      column: 7
+      row: 9
     events:
       - BattleEvent#BATTLE_EVENT
-  - template_name: monster
-    key: goblin
-    location:
-      column: 2
-      row: 10
-    events:
-      - BattleEvent#BATTLE_EVENT
-  - template_name: npc
-    key: dwarf
-    location:
-      column: 10
-      row: 1
-    events:
-      - ConversationEvent#CONVERSATION_EVENT
   - template_name: treasure
     key: loot_chest
     location:
-      column: 5
-      row: 6
+      column: 7
+      row: 10
     events:
       - InventoryEvent#LOOT_EVENT
   - template_name: finish_line
@@ -59,5 +38,5 @@ templates:
       column: 10
       row: 10
     events:
-      - GameEvent#GAME_FINISH_EVENT
+      - GameEvent#LEVEL_FINISH_EVENT
 ...
